--- a/.gitignore
+++ b/.gitignore
@@ -1,106 +1,79 @@
-# From https://github.com/github/gitignore/blob/master/Gradle.gitignore
+# Gradle
+# ------
 .gradle
-/build/
+/build
 
-# Ignore Gradle GUI config
-gradle-app.setting
+# IDEA
+# ----
+.idea
+.idea/
+.shelf
+/*.iml
+/*.ipr
+/*.iws
+/out
 
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
-
-# Cache of project
-.gradletasknamecache
-
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
-
-
-
-# From https://github.com/github/gitignore/blob/master/Java.gitignore
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+/out/*.*
 
 
-# From https://github.com/github/gitignore/blob/master/Global/JetBrains.gitignore
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+# Eclipse
+# -------
+*.classpath
+*.project
+*.settings
 
-# User-specific stuff:
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
-.idea/vcs.xml
-.idea/jsLibraryMappings.xml
+/bin
+.metadata/
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
 
-# Sensitive or high-churn files:
-.idea/dataSources.ids
-.idea/dataSources.xml
-.idea/dataSources.local.xml
-.idea/sqlDataSources.xml
-.idea/dynamic.xml
-.idea/uiDesigner.xml
+# Eclipse Core
+.project
 
-# Gradle:
-.idea/gradle.xml
-.idea/libraries
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
 
-# Mongo Explorer plugin:
-.idea/mongoSettings.xml
+# STS (Spring Tool Suite)
+.springBeans
 
-## File-based project format:
-*.iws
+# Code Recommenders
+.recommenders/
 
-## Plugin-specific files:
+# Logs
+# ----
+/*.log
 
-# IntelliJ
-/out/
+# Others
+# ----
+**/*.class
+**/*.bin
+**/*.build
+**/*.out
+build
+build/
+**/*.jar
 
-# mpeltonen/sbt-idea plugin
-.idea_modules/
+# Maven specific
 
-# JIRA plugin
-atlassian-ide-plugin.xml
+target/
 
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
+#Skip all SVN related
+.svn/
+.svn/entries
+.svn*
+*/.svn/*
 
-
-*.DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must end with two \r
-Icon
-
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+#Skip all CVS related
+CVS/
+/CVS/*
+**/CVS/*
+.cvsignore
+*/.cvsignore
